001 implement logout feature
